--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
