--- a/src/components/CodeView/CodeView.css
+++ b/src/components/CodeView/CodeView.css
@@ -2,7 +2,7 @@
     display: inline-block;
 }
 
-.renderer-demo-scene {
+.code-view {
     width: 500px;
     height: 500px;
     position: relative;
