--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,15 @@ code {
     flex-direction: column;
     justify-content: space-between;
 }
+
+.button {
+    background-color: #52d3fa; /* Green */
+    border: 1px solid black;
+    color: #2C5B61;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    height: 50px;
+}
