--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,26 @@ code {
     justify-content: space-between;
 }
 
+.button:hover {
+    background: #47a7f5 radial-gradient(circle, transparent 1%, #47a7f5 1%) center/15000%;
+}
+.button:active {
+    background-color: #6eb9f7;
+    background-size: 100%;
+    transition: background 0s;
+}
+
 .button {
-    background-color: #52d3fa; /* Green */
-    border: 1px solid black;
-    color: #2C5B61;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    border: none;
+    border-radius: 2px;
+    padding: 12px 28px;
     font-size: 16px;
-    height: 50px;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: white;
+    background-color: #52d3fa;
+    box-shadow: 0 0 4px #999;
+    outline: none;
+    background-position: center;
+    transition: background 0.8s;
 }
