--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,8 +17,13 @@
     border: 1px solid #52d3fa;
 }
 
-.card-content h2 {
-    margin-top: 0;
+.card-content h1, .card-content h2 {
+    margin: 10px 0;
+}
+
+
+.card-content p {
+    font-size: 30px;
 }
 
 .copyright-info {
